[Wip] Added attacks

--- a/02-DndBattle/02-DndBattle/02-DndBattle.vcxproj.filters
+++ b/02-DndBattle/02-DndBattle/02-DndBattle.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="ScreenPrint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Attacks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
