--- a/02-DndBattle/02-DndBattle/02-DndBattle.vcxproj
+++ b/02-DndBattle/02-DndBattle/02-DndBattle.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="CharacterTypes.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Attacks.h" />
     <ClInclude Include="CharacterTypes.h" />
     <ClInclude Include="Elements.h" />
     <ClInclude Include="Character.h" />
