--- a/02-DndBattle/02-DndBattle(Rebuild)/02-DndBattle(Rebuild)/02-DndBattle(Rebuild).vcxproj.filters
+++ b/02-DndBattle/02-DndBattle(Rebuild)/02-DndBattle(Rebuild)/02-DndBattle(Rebuild).vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="02-DndBattle.cpp">
+    <ClCompile Include="02-DndBattle(Rebuild).cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Character.cpp">
@@ -24,24 +27,21 @@
     <ClCompile Include="CharacterTypes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Engine.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Character.h">
+    <ClInclude Include="Engine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Elements.h">
+    <ClInclude Include="Character.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CharacterTypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ScreenPrint.h">
+    <ClInclude Include="Elements.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Engine.h">
+    <ClInclude Include="ScreenPrint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
